--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx tailwindcss -i ./src/css/tailwind.css -o ./docs/css/style.css --watch",
-    "online": "node api/index.js",
+    "online": "node index.js",
     "multi": "start npm run dev && start npm run online"
   },
   "keywords": [],
