--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "directories": {
-    "doc": "docs"
+    "doc": "public"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx tailwindcss -i ./src/css/tailwind.css -o ./docs/css/style.css --watch",
+    "dev": "npx tailwindcss -i ./src/css/tailwind.css -o ./public/css/style.css --watch",
     "online": "node index.js",
     "multi": "start npm run dev && start npm run online"
   },
