--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,15 @@
 {
   "version": 2,
-  "rewrites": [{ "source": "./api/index.js", "destination": "/api" }]
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "index.js"
+    }
+  ]
 }
